z-index menù fix

--- a/webapp/src/app/app.component.sass
+++ b/webapp/src/app/app.component.sass
@@ -2,7 +2,7 @@
     position: -webkit-sticky
     position: sticky
     top: 0
-    z-index: 1
+    z-index: 100
 #mobile-menu
     display: none
 /* Extra small devices (phones, 600px and down) */
